--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+
+.father{
+  width: 350px;
+  border: 1px solid black;
+  margin: 10px;
+  box-sizing: border-box;
+  background: yellow;
+}
+.App{
+  box-sizing: border-box;
+  flex-wrap: wrap;
+}
+
+.card{
+  width: 350px;
+  border: 1px solid black;
+  margin: 10px;
+  box-sizing: border-box;
+  background: #61dafb;
+}
+.App>div{
+  box-sizing: border-box;
+  justify-content: center;
   text-align: center;
 }
+.App>div>div{
+  background: #61dafb;
+  text-align: center;
+  height:500px;
+  width: 300px;
+  border: 1px solid black;
+  margin: 10px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
