--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,14 @@
-
-.father{
-  width: 350px;
-  border: 1px solid black;
-  margin: 10px;
-  box-sizing: border-box;
-  background: yellow;
-}
-.App{
-  box-sizing: border-box;
-  flex-wrap: wrap;
+.App>div div{
+    border: 1px solid black;
+    width: 400px;
+    text-align: center;
 }
 
-.card{
-  width: 350px;
-  border: 1px solid black;
-  margin: 10px;
-  box-sizing: border-box;
-  background: #61dafb;
+.App>div div>button{
+    width: 100%;
 }
-.App>div{
-  box-sizing: border-box;
-  justify-content: center;
-  text-align: center;
-}
-.App>div>div{
-  background: #61dafb;
-  text-align: center;
-  height:500px;
-  width: 300px;
-  border: 1px solid black;
-  margin: 10px;
 
+p{
+    border: 1px solid black;
+    height: 50px;
 }
